--- a/asset/style.css
+++ b/asset/style.css
@@ -18,24 +18,16 @@
 
   header{
     height: 50px;                 
-    width: 100%;
     position: relative;
     background-color: rgba(49,97,224,255);
 }
 
-/* .barra{
-    border: solid black 1px;
-    background-color: cadetblue;
-    margin-left: 150px;
-    height: 50px;
-    width: 80%;
-} */
-
-#logo{
-    padding-left: 200px;
-    padding-top: 5px;
-    /* position: absolute;
-    float: right; */
+.container-center{
+    width: 90%;
+    max-width: 1180px;  
+    /* va bene anche solo una larghezza fissa con max-widht */
+    margin: 0 auto;  
+    position: relative;
 }
 
 
@@ -49,14 +41,50 @@ nav ul li a{
     color: white;
 }
 
-.menu img{
-    float: left;
+#logo{
+    float: left; 
     vertical-align: middle;
+
 }
 
 .menu{
+    float: right;
     text-align: center;
+}
 
+.accedi{
+    float: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .barra{
+    border: solid black 1px;
+    background-color: cadetblue;
+    margin-left: 150px;
+    height: 50px;
+    width: 80%;
+} */
+
+
+
+
+
+
+
+
+.menu{
+    text-align: center;
 }
 
 
@@ -64,7 +92,7 @@ nav ul li a{
     height: 100vh;
     border: solid black 1px;
     background-color: cadetblue;
-}
+} */
 
 
 
