abbozzo header e main

--- a/asset/style.css
+++ b/asset/style.css
@@ -16,20 +16,21 @@
 
   /* INTESTAZIONE */
 
+
   header{
     height: 50px;                 
     position: relative;
     background-color: rgba(49,97,224,255);
+    padding: 10px 0;
 }
 
 .container-center{
-    width: 90%;
+    /* width: 90%; */
     max-width: 1180px;  
     /* va bene anche solo una larghezza fissa con max-widht */
     margin: 0 auto;  
-    position: relative;
+    
 }
-
 
 nav ul li{
     display: inline-block;
@@ -39,16 +40,17 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: white;
+    padding: 0 25px;
 }
 
 #logo{
     float: left; 
     vertical-align: middle;
-
 }
 
 .menu{
-    float: right;
+    float: left;
+    width: calc(100% - 200px);
     text-align: center;
 }
 
@@ -58,57 +60,58 @@ nav ul li a{
 
 
 
-
-
-
-
-
-
-
-
-
-
-/* .barra{
-    border: solid black 1px;
-    background-color: cadetblue;
-    margin-left: 150px;
-    height: 50px;
-    width: 80%;
-} */
-
-
-
-
-
-
-
-
-.menu{
-    text-align: center;
-}
-
-
-.view{
-    height: 100vh;
-    border: solid black 1px;
-    background-color: cadetblue;
-} */
-
-
-
-
 /* CORPO */
 
 
-.mezza-view{
-    height: 50%;
-    border: solid black 1px;
-    background-color: rgba(49,97,224,255);
-    /* transform:translate( -50%, -50%); */
+
+.img-sfondo{
+    min-height: 546px;
+    background-image: url(./img/jumbo.png);
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+    /* (con il COVER il no-repeat non serve) */
 }
+
+.testo-sfondo{
+    width: 900px;
+    margin: 0 auto;
+    /* float: ; */
+    color: white;
+    text-align: center;
+}
+
+.sfondo-bianco{
+    min-height: 546px;
+    background-color: white;
+    background-size: repeat;
+}
+
+/* .sfondo-onde{
+    min-height: 546px;
+    background-image: url(./img/wave.svg);
+    background-size: contain;  
+} */
+
+.sfondo-grigio{
+    background-color: rgba(246,246,246,255);
+    min-height: 546px;
+    background-size: contain;
+}
+
+
+.quarto-quadrante{  
+    padding: 10px 0;
+    background-color:rgba(246,246,246,255);
+    height: 100vh;
+}
+
+
+
+
+
+
+
 
 
 
 /* FOOTER  */
-
-
