--- a/asset/style.css
+++ b/asset/style.css
@@ -55,7 +55,26 @@ nav ul li a{
 
 .accedi{
     float: right;
+    background-color: white; 
+    color: black;
+    padding: 5px 12px;
+    margin-top: -22px;
 }
+
+.button{
+    border-radius: 40px;
+    text-decoration: none;
+    background-color: white; 
+}
+
+.button-violet{
+    background-color: rgba(142,161,225,255);
+    border-radius: 40px;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+
 
 
 
@@ -211,8 +230,6 @@ footer{
     height: 90vh;
     background-color: #232323;
 }
-
-
 
 
 .ultima-pagina{
