--- a/asset/style.css
+++ b/asset/style.css
@@ -194,7 +194,7 @@ a:hover{
 
 .fullview{
     width: 100%;
-    height: 150vh;
+    height: 125vh;
     background-color: rgba(246,246,246,255);
     text-align: center;
 }
@@ -258,7 +258,7 @@ footer{
     width: 20%;
     background-color: white;
     height: 50vh;
-    border: solid red 1px;
+    border: solid #8EA0E1 2px;
     float: left;      
 }
 
@@ -266,11 +266,19 @@ footer{
     width: 15%;
     background-color: white;
     height: 50vh;
-    border: solid red 1px;
+    border: solid #8EA0E1 2px;
     float: left;}
 
 .column{
-    margin: 10px 22px;
+    margin: 40px 22px;
+}
+
+.column a{
+    color: black;
+}
+
+hr{
+    border-color: #8EA0E1;
 }
 
 
