--- a/asset/style.css
+++ b/asset/style.css
@@ -243,7 +243,7 @@ a:hover{
 
 footer{
     width: 100%;
-    height: 90vh;
+    /* height: 90vh; */
     background-color: #232323;
 }
 
@@ -251,7 +251,7 @@ footer{
 .ultima-pagina{
     width: 100%;
     height: 90vh;
-    position: relative;
+    /* position: relative; */
 }
 
 .big{
@@ -267,7 +267,8 @@ footer{
     background-color: white;
     height: 50vh;
     border: solid #8EA0E1 2px;
-    float: left;}
+    float: left;
+}
 
 .column{
     margin: 40px 22px;
@@ -281,6 +282,14 @@ hr{
     border-color: #8EA0E1;
 }
 
+div ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+div ul{
+    list-style-type: none;
+}
 
 
 
